--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,15 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-
+  sqflite: ^1.3.0+1
+  image_picker: ^0.6.0+3
+  intl: ^0.16.1
+  auto_size_text: ^2.1.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
