--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  url_launcher: ^5.0.2
   cupertino_icons: ^0.1.3
   sqflite: ^1.3.0+1
   image_picker: ^0.6.0+3
   intl: ^0.16.1
+  flutter_dialogflow: ^0.1.3
   auto_size_text: ^2.1.0  
   
 dev_dependencies:
@@ -52,6 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/credentials.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
