--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   image_picker: ^0.6.0+3
   intl: ^0.16.1
   flutter_dialogflow: ^0.1.3
-  auto_size_text: ^2.1.0  
+  auto_size_text: ^2.1.0
+  gradient_app_bar: ^0.0.1
   
 dev_dependencies:
   flutter_test:
