--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   url_launcher: ^5.0.2
+  fade: ^1.0.0
+  google_sign_in: ^4.5.1
   cupertino_icons: ^0.1.3
   sqflite: ^1.3.0+1
   image_picker: ^0.6.0+3
